crates/ruff_python_parser/tests/snapshots/invalid_syntax@irrefutable_case_pattern.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/irrefutable_case_pattern.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..317,
        body: [
            Match(
                StmtMatch {
                    node_index: NodeIndex(None),
                    range: 0..61,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 6..7,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 13..26,
                            node_index: NodeIndex(None),
                            pattern: MatchAs(
                                PatternMatchAs {
                                    node_index: NodeIndex(None),
                                    range: 18..21,
                                    pattern: None,
                                    name: Some(
                                        Identifier {
                                            id: Name("var"),
                                            range: 18..21,
                                            node_index: NodeIndex(None),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 23..26,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 23..26,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 50..61,
                            node_index: NodeIndex(None),
                            pattern: MatchValue(
                                PatternMatchValue {
                                    node_index: NodeIndex(None),
                                    range: 55..56,
                                    value: NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 55..56,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 58..61,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 58..61,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
            Match(
                StmtMatch {
                    node_index: NodeIndex(None),
                    range: 62..102,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 68..69,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 75..86,
                            node_index: NodeIndex(None),
                            pattern: MatchAs(
                                PatternMatchAs {
                                    node_index: NodeIndex(None),
                                    range: 80..81,
                                    pattern: None,
                                    name: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 83..86,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 83..86,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 91..102,
                            node_index: NodeIndex(None),
                            pattern: MatchValue(
                                PatternMatchValue {
                                    node_index: NodeIndex(None),
                                    range: 96..97,
                                    value: NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 96..97,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 99..102,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 99..102,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
            Match(
                StmtMatch {
                    node_index: NodeIndex(None),
                    range: 125..222,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 131..132,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 138..160,
                            node_index: NodeIndex(None),
                            pattern: MatchAs(
                                PatternMatchAs {
                                    node_index: NodeIndex(None),
                                    range: 143..155,
                                    pattern: Some(
                                        MatchAs(
                                            PatternMatchAs {
                                                node_index: NodeIndex(None),
                                                range: 143..147,
                                                pattern: None,
                                                name: Some(
                                                    Identifier {
                                                        id: Name("var1"),
                                                        range: 143..147,
                                                        node_index: NodeIndex(None),
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                    name: Some(
                                        Identifier {
                                            id: Name("var2"),
                                            range: 151..155,
                                            node_index: NodeIndex(None),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 157..160,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 157..160,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 211..222,
                            node_index: NodeIndex(None),
                            pattern: MatchValue(
                                PatternMatchValue {
                                    node_index: NodeIndex(None),
                                    range: 216..217,
                                    value: NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 216..217,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 219..222,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 219..222,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
            Match(
                StmtMatch {
                    node_index: NodeIndex(None),
                    range: 223..316,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 229..230,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 236..264,
                            node_index: NodeIndex(None),
                            pattern: MatchOr(
                                PatternMatchOr {
                                    node_index: NodeIndex(None),
                                    range: 241..259,
                                    patterns: [
                                        MatchValue(
                                            PatternMatchValue {
                                                node_index: NodeIndex(None),
                                                range: 241..253,
                                                value: Attribute(
                                                    ExprAttribute {
                                                        node_index: NodeIndex(None),
                                                        range: 241..253,
                                                        value: Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 241..245,
                                                                id: Name("enum"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        attr: Identifier {
                                                            id: Name("variant"),
                                                            range: 246..253,
                                                            node_index: NodeIndex(None),
                                                        },
                                                        ctx: Load,
                                                        optional: false,
                                                    },
                                                ),
                                            },
                                        ),
                                        MatchAs(
                                            PatternMatchAs {
                                                node_index: NodeIndex(None),
                                                range: 256..259,
                                                pattern: None,
                                                name: Some(
                                                    Identifier {
                                                        id: Name("var"),
                                                        range: 256..259,
                                                        node_index: NodeIndex(None),
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 261..264,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 261..264,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 305..316,
                            node_index: NodeIndex(None),
                            pattern: MatchValue(
                                PatternMatchValue {
                                    node_index: NodeIndex(None),
                                    range: 310..311,
                                    value: NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 310..311,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 313..316,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 313..316,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | match x:
2 |     case var: ...  # capture pattern
  |          ^^^ Syntax Error: name capture `var` makes remaining patterns unreachable
3 |     case 2: ...
4 | match x:
  |


  |
3 |     case 2: ...
4 | match x:
5 |     case _: ...
  |          ^ Syntax Error: wildcard makes remaining patterns unreachable
6 |     case 2: ...    # wildcard pattern
7 | match x:
  |


   |
 6 |     case 2: ...    # wildcard pattern
 7 | match x:
 8 |     case var1 as var2: ...  # as pattern with irrefutable left-hand side
   |          ^^^^ Syntax Error: name capture `var1` makes remaining patterns unreachable
 9 |     case 2: ...
10 | match x:
   |


   |
 9 |     case 2: ...
10 | match x:
11 |     case enum.variant | var: ...  # or pattern with irrefutable part
   |                         ^^^ Syntax Error: name capture `var` makes remaining patterns unreachable
12 |     case 2: ...
   |


   |
 9 |     case 2: ...
10 | match x:
11 |     case enum.variant | var: ...  # or pattern with irrefutable part
   |          ^^^^^^^^^^^^^^^^^^ Syntax Error: alternative patterns bind different names
12 |     case 2: ...
   |
