crates/ruff_python_parser/tests/snapshots/invalid_syntax@iter_unpack_return_py37.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/iter_unpack_return_py37.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..91,
        body: [
            Assign(
                StmtAssign {
                    node_index: NodeIndex(None),
                    range: 43..59,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 43..47,
                                id: Name("rest"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(None),
                            range: 50..59,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 51..52,
                                        value: Int(
                                            4,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 54..55,
                                        value: Int(
                                            5,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 57..58,
                                        value: Int(
                                            6,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                            is_anon_named_tuple: false,
                            is_anon_named_tuple_value: false,
                            parameter_slash: None,
                            parameter_star: None,
                            is_parameter_shape: false,
                        },
                    ),
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 60..90,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 64..65,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 65..67,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Return(
                            StmtReturn {
                                node_index: NodeIndex(None),
                                range: 69..90,
                                value: Some(
                                    Tuple(
                                        ExprTuple {
                                            node_index: NodeIndex(None),
                                            range: 76..90,
                                            elts: [
                                                NumberLiteral(
                                                    ExprNumberLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 76..77,
                                                        value: Int(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                                NumberLiteral(
                                                    ExprNumberLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 79..80,
                                                        value: Int(
                                                            2,
                                                        ),
                                                    },
                                                ),
                                                NumberLiteral(
                                                    ExprNumberLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 82..83,
                                                        value: Int(
                                                            3,
                                                        ),
                                                    },
                                                ),
                                                Starred(
                                                    ExprStarred {
                                                        node_index: NodeIndex(None),
                                                        range: 85..90,
                                                        value: Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 86..90,
                                                                id: Name("rest"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        ctx: Load,
                                                    },
                                                ),
                                            ],
                                            ctx: Load,
                                            parenthesized: false,
                                            is_anon_named_tuple: false,
                                            is_anon_named_tuple_value: false,
                                            parameter_slash: None,
                                            parameter_star: None,
                                            is_parameter_shape: false,
                                        },
                                    ),
                                ),
                            },
                        ),
                    ],
                    is_trailing_lambda: false,
                },
            ),
        ],
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: {"target-version": "3.7"}
2 | rest = (4, 5, 6)
3 | def f(): return 1, 2, 3, *rest
  |                          ^^^^^ Syntax Error: Cannot use iterable unpacking in return statements on Python 3.7 (syntax was added in Python 3.8)
  |
